# of.yaml-template

./: .gitignore  Makefile  Pipfile  README.md  main.py  pyproject.toml
config/: requirements.txt
config/pdm/: pyproject.toml
script/: dam_break.py  naca_airfoil.py
static/: damBreak.json  data.json
template/: damBreak.yaml  nacaAirfoil.yaml
