[project]
name = ""
version = "0.1.0"
description = "Template and demo for iydon/of.yaml repository"
authors = [
    {name = "iydon", email = "liangiydon@gmail.com"},
]
dependencies = [
    "ifoam[full]>=0.11.1",
    "numpy>=1.23.2",
    "matplotlib>=3.5.3",
]
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
